--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
    <div class="newArrivals">
      <div class="heading">
-      <h2 class="text-center">Trending T-Shirts</h2>
+      <h2 class="text-center">Trending Shirts</h2>
      </div>
     <div class="container">
       <div class="row">
